<?xml version="1.0"?>
<package format="3">
  <name>pyramid_ros2_transport</name>
  <version>0.1.0</version>
  <description>Generic ROS2 runtime binding for PYRAMID/PCL transport semantics.</description>

  <maintainer email="devnull@example.com">Mujin</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
